--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,7 @@
     <input type="submit" value="Search" />
   </form>
   <hr>
-	<h3>Results</h1>
+	<h3>BoardGameGeek.com Results</h1>
     <p id='content'></p>
     <script src="popup.js"></script>
 </body>
